--- a/pages/assignments/checkmatching.module.css
+++ b/pages/assignments/checkmatching.module.css
@@ -1,8 +1,11 @@
 .pms{
-    display: inline-block !important;
-    margin-right: 20px !important;
+    /* display: inline-block !important; */
+    /* margin: 40px !important; */
+    width: 80% !important;
+    margin: 0 10% !important;
+    align-items: center;
 }
 
-.matching {
-    margin: 0 40px 40px !important;
+.child{
+    display: inline-block !important;
 }
