Revert "--added in grading matrix"
This reverts commit 6912254dc4a5aa5a0b6f506d8188748fcea9d4fc.

--- a/pages/assignments/checkmatching.module.css
+++ b/pages/assignments/checkmatching.module.css
@@ -1,11 +1,8 @@
 .pms{
-    /* display: inline-block !important; */
-    /* margin: 40px !important; */
-    width: 80% !important;
-    margin: 0 10% !important;
-    align-items: center;
+    display: inline-block !important;
+    margin-right: 20px !important;
 }
 
-.child{
-    display: inline-block !important;
+.matching {
+    margin: 0 40px 40px !important;
 }
