--checklist to show what steps have been taken

--- a/pages/assignments/fullassignmentview.module.css
+++ b/pages/assignments/fullassignmentview.module.css
@@ -24,6 +24,7 @@
     box-shadow: none !important;
     position: static !important;
     padding: 0 20px !important;
+    margin-top: 0 !important;
 }
 
 /* .acc {
