--- a/global_styles/utilities.scss
+++ b/global_styles/utilities.scss
@@ -1,7 +1,7 @@
 /*
 For use:
 In the scss file you want to use it, put "import '../whateverfilepath/global_styles/utilities.scss'
-In the class name you want to add this to, put "@export .whatever-class-name-you-pick-from-here"
+In the class name you want to add this to, put "@extend .whatever-class-name-you-pick-from-here"
 */
 
 // centers the content in a container, horizontally and vertically
