--- a/pages/assignments/reportlist/reviewreportlist.module.scss
+++ b/pages/assignments/reportlist/reviewreportlist.module.scss
@@ -15,10 +15,12 @@
 .score{
     @extend .flex_center;
     flex-direction: column;
+    justify-content: flex-start;
     border: 1px solid lightgray;
     background-color: #ededed;
-    width: 100px;
-    padding: 15px 0;
+    width: 35vw;
+    max-width: 45%;
+    padding: 15px;
     margin: 15px;
 
     &Container{
@@ -29,20 +31,21 @@
     &__value{
         color: $primary_color;
         font-weight: bold;
-        font-size: 32px;
+        font-size: 40px;
         margin: 0 !important;
     }
 
     &__title{
-        font-weight: bold;
+        // font-weight: bold;
         margin: 0 !important;
-        color: $primary_color;
+        color: darkgray;
+        line-height: normal;
     }
 
     &__rubric_field{
         font-weight: bold;
         text-align: center;
-        font-size: 12px;
+        font-size: 16px;
         margin: 0 0 10px 0!important;
     }
 
@@ -51,8 +54,10 @@
 .submission{
     border: 1px solid $primary_color;
     margin: 0 15px;
+    width: 45%;
 
     &Container{
+        width: 100%;
         display: flex;
         flex-direction: row;
         flex-wrap: wrap;
