--- a/pages/assignments/reportlist/reviewreportlist.module.scss
+++ b/pages/assignments/reportlist/reviewreportlist.module.scss
@@ -5,7 +5,9 @@
 .details{
     display: flex;
     flex-direction: column;
-
+    align-items: center;
+    margin-left: 10%;
+    width: 100%;
     &__title{
         font-weight: bold;
         margin: 0 !important;
