--- a/pages/assignments/matching/matching.module.scss
+++ b/pages/assignments/matching/matching.module.scss
@@ -28,21 +28,23 @@
     &Cell{
         @extend .flex_center;
         text-align: center;
-
         flex-direction: column;
+        padding: 5px;
         height: 150px;
         width: 150px;
         background-color: $primary_color;
         margin: 5px;
+        overflow-y: auto;
+        // overflow-x: hidden;
 
         &__title{
-            font-size: 11px;;
+            font-size: 15px;;
             margin: 0 !important;
             margin-top: 5px !important;
         }
 
         &__value{
-            font-size: 20px;
+            font-size: 11px;
             font-weight: bold;
             margin: 0 !important;
         }
