--- a/global_styles/colors.scss
+++ b/global_styles/colors.scss
@@ -4,3 +4,4 @@ $purple:rgba(146, 25, 188, 0.34);
 
 // implicit colors (easily changeable if we change the color scheme later)
 $primary_color: $purple;
+$outline_color: red;
