--- a/components/styles/submissionview.module.scss
+++ b/components/styles/submissionview.module.scss
@@ -8,6 +8,10 @@
   padding: 0 20px !important;
   border-radius: 0 !important;
 }
+.btw {
+  color: #656565;
+  font-size: 0.7em;
+}
 
 .save {
   margin: 10px !important;
