display action items

--- a/components/styles/listcontainer.module.scss
+++ b/components/styles/listcontainer.module.scss
@@ -37,6 +37,15 @@
   padding-right: 20px;
 }
 
+.actionItem {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  color: #ada5a5;
+  //text-align: right !important;
+  //padding-right: 20px;
+}
+
 .row {
     border-top: 2px solid #e5e5e5;
     height: 48px !important;
