--- a/pages/assignments/matching/matching.module.scss
+++ b/pages/assignments/matching/matching.module.scss
@@ -47,6 +47,35 @@
             font-size: 11px;
             font-weight: bold;
             margin: 0 !important;
+            color: black;
+        }
+
+        &__taValue{
+            font-size: 11px;
+            font-weight: bold;
+            margin: 0 !important;
+            color: blue;
+        }
+
+        &__completedValue{
+            font-size: 11px;
+            font-weight: bold;
+            margin: 0 !important;
+            color: green;
+        }
+
+        &__notCompletedValue{
+            font-size: 11px;
+            font-weight: bold;
+            margin: 0 !important;
+            color: red;
+        }
+
+        &__progress{
+            // justify-self: end;
+            width: 100%;
+            position: relative;
+            bottom: 0px;
         }
     }
 
