--- a/pages/assignments/initialchecklist/initialchecklist.module.scss
+++ b/pages/assignments/initialchecklist/initialchecklist.module.scss
@@ -1,4 +1,5 @@
 @import '../../../global_styles/colors.scss';
+@import "../../../global_styles/utilities.scss";
 
 .column{
     width: 30%;
@@ -28,6 +29,44 @@
 .dropdown{
     width: 200px !important;
     display: inline-block;
+}
 
+.formfield{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
 
+.desc {
+    margin: 0 40px 40px !important;
+}
+
+.below {
+    margin: 40px 0 0  !important;
+}
+
+.rightBelow {
+    margin: 20px 0 0  !important;
+}
+
+.submitButton {
+    margin: 15px !important;
+}
+
+.result{
+    @extend .flex_center;
+    padding: 0 20% 40px 20%;
+
+    &__header{ 
+        @extend .flex_center;
+        text-align: right;
+        padding-right: 20px;
+        width: 200px;
+        
+    }
+}
+
+.left {
+    margin-left: 25px;
+    width: '25ch';
 }
