--- a/components/styles/submissionview.module.scss
+++ b/components/styles/submissionview.module.scss
@@ -23,3 +23,115 @@
 .bottom {
   width: 80%;
 }
+.right {
+  float: right;
+  width: 300px;
+  border: 3px solid #73AD21;
+  padding: 10px;
+}
+
+.report{
+  color: black;
+  font-size: 110%;
+  // text-decoration: underline;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  &__title{
+      font-weight: bold;
+      margin: 0 !important;
+  }
+}
+
+.peerreviewreport{
+  color: black;
+  font-size: 135%;
+  text-decoration: underline;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  &__title{
+      font-weight: bold;
+      margin: 0 !important;
+  }
+}
+
+.comments{
+  color: red ;
+  font-size: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  &__title{
+      font-weight: bold;
+      margin: 0 !important;
+  }
+}
+
+.tagradingcriteria{
+  color: red;
+  font-size: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: left;
+  width: 100%;
+  &__title{
+      font-weight: bold;
+      margin: 0 !important;
+  }
+}
+
+.details{
+  display: flex;
+  font-size: 100;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  &__title{
+      font-weight: bold;
+      margin: 0 !important;
+  }
+}
+
+.peerreviewscore{
+  display: flex;
+  font-size: 120%;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  &__title{
+      font-weight: bold;
+      margin: 0 !important;
+  }
+}
+
+.ungradedreport{
+  color: red;
+  font-size: 130%;
+  // text-decoration: underline;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  &__title{
+      font-weight: bold;
+      margin: 0 !important;
+  }
+}
+
+.comparestatement{
+  color: blue;
+  font-size: 110%;
+  // text-decoration: underline;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  &__title{
+      font-weight: bold;
+      margin: 0 !important;
+  }
+}
