--- a/pages/grades/grades.module.scss
+++ b/pages/grades/grades.module.scss
@@ -80,3 +80,30 @@
 .disclaimer {
     text-align: center;
 }
+
+.report{
+    color: red;
+    font-size: 135%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    &__title{
+        font-weight: bold;
+        margin: 0 !important;
+    }
+}
+
+.comments{
+    color: black;
+    font-size: 135%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    &__title{
+        font-weight: bold;
+        margin: 0 !important;
+    }
+}
+
