--- a/components/styles/container.module.scss
+++ b/components/styles/container.module.scss
@@ -31,3 +31,11 @@
   .header {
     font-weight: 500 !important;
   }
+
+  .load{
+    width:100%;
+    height:100%;
+    position:fixed;
+    z-index:9999;
+    background:url("https://www.creditmutuel.fr/cmne/fr/banques/webservices/nswr/images/loading.gif") no-repeat center center rgba(0,0,0,0.25)
+}
