displayed TA review/comments alongside a student's peer review

--- a/components/styles/submissionview.module.scss
+++ b/components/styles/submissionview.module.scss
@@ -46,8 +46,8 @@
 
 .peerreviewreport{
   color: black;
-  font-size: 135%;
-  text-decoration: underline;
+  font-size: 120%;
+  // text-decoration: underline;
   display: flex;
   flex-direction: column;
   align-items: center;
