--- a/pages/assignments/initialchecklist/initialchecklist.module.scss
+++ b/pages/assignments/initialchecklist/initialchecklist.module.scss
@@ -75,3 +75,11 @@
     display: flex;
     flex-direction: row;
 }
+
+.name {
+    font-style: normal;
+    font-weight: normal;
+    font-size: '200pt';
+    color: #000000;
+    padding-left: 25px;
+  }
