--- a/components/styles/listcontainer.module.scss
+++ b/components/styles/listcontainer.module.scss
@@ -16,8 +16,19 @@
   background: #e5e5e5;
 }
 
+.alertheader {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 19px;
+  line-height: 48px;
+  text-align: left;
+
+  color: #000000;
+  background: #e50000;
+}
+
 .hcell {
-  padding-left: 20px; 
+  padding-left: 20px;
 }
 
 .name {
@@ -51,4 +62,3 @@
     width: 90% !important;
     cursor:pointer !important;
 }
-
