--- a/components/styles/accordioncontainer.module.scss
+++ b/components/styles/accordioncontainer.module.scss
@@ -35,9 +35,11 @@
 .name {
   font-style: normal;
   font-weight: normal;
-  font-size: 17px;
+  font-size: 14px;
   color: #000000;
-  padding-left: 20px;
+  padding-left: 16px;
+  font-weight: 400;
+  font-family: "Roboto";
 }
 
 .info {
@@ -68,8 +70,11 @@
 }
 
 .accordionsummary {
-  // background-color: #e50000 !important;
-  // border: 10px solid #ff0000 !important;
+  // border-top: 2px solid #e5e5e5;
+  // height: 48px !important;
+  // text-align: left;
+  padding: 0px !important;
+
 }
 
 .accordiondetails {
