--- a/pages/download/download.module.scss
+++ b/pages/download/download.module.scss
@@ -52,6 +52,7 @@
         padding: 1rem;
         border: 2px solid black;
         border-radius: 1rem;
+        margin: 0 1rem 1rem 1rem;
 
         li {
             font-weight: bold;
@@ -61,6 +62,7 @@
             display: flex;
             flex-direction: column;
             align-items: center;
+            border-bottom: 1px dotted black;
 
             .tooltipText {
                 visibility: hidden;
@@ -69,7 +71,7 @@
                 background-color: $primary_color;
                 color: #000;
                 text-align: center;
-                padding: 5px 0;
+                padding: 0.5rem;
                 border-radius: 6px;
                 
                 // Position the tooltip text
