Old changes from last quarter

--- a/components/styles/accordioncontainer.module.scss
+++ b/components/styles/accordioncontainer.module.scss
@@ -87,4 +87,5 @@
 .accordiondetails {
   // background-color: #e50000 !important;
   // border: 1px solid #a4a4a4 !important;
+  display: inline !important;
 }
