--- a/components/styles/selectassignments.module.scss
+++ b/components/styles/selectassignments.module.scss
@@ -1,4 +1,4 @@
-// .accordion {
-//     width: 100% !important;
-//     margin: 0 !important;
-// }
+.inner_accordion {
+    width: 100% !important;
+    margin: 0 !important;
+}
