--- a/components/styles/submissionview.module.scss
+++ b/components/styles/submissionview.module.scss
@@ -145,26 +145,106 @@
 }
 
 .submissiondata {
-  display: flex;
-  flex-direction: column;
+  margin-top: 1rem;
+
+  display: grid;
+  grid-template-columns: 6fr 10fr;
+  grid-template-rows: auto;
+  grid-template-areas: "barChart commentsField";
+
+  flex-direction: row;
   justify-content: space-evenly;
   align-items: center;
-  border: 2px dashed blue;
+  height: 500px;
 
-  & > p {
-    width: 25%;
-    text-align: center;
+  .barChart {
+    grid-area: barChart;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    margin: 0 1rem 0 0; 
+    border: 2px dahsed blue;
   }
 
-  .commentField {
+  .commentsField {
+    grid-area: commentsField;
+    max-height: 100%;
+    overflow: scroll;
+    border: 1px solid gray;
+    border-radius: 0.25rem;
+    margin: 0 0 0 1rem;
+    box-shadow: 0px 2px 5px lightgray;
 
 
-    .highlightedComment {
-      border: 2px dashed red;
+    .commentLabel {
+      color: white;
+      background-color: gray;
+      max-height: 50px;
+      min-width: 300px;
+      max-width: 800px;
+      margin: auto;
+      padding: 0.5rem;
+
+      grid-area: commentLabel;
+      text-align: center;
+      // transform: rotate(-90deg);
     }
-  }
+
+    .contentContainer {
+      display: flex;
+      flex-direction: column;
+      font-family: monospace;
+
+      // grid-template-columns: 1fr 5fr;
+      // grid-template-rows: auto auto;
+      // grid-template-areas: 
+      //   "commentLabel peerComment"
+      //   "commentLabel taComment";
+
+      .selectedComment {
+        // border: 2px dotted red;
+        transform: scale(1.05);
+        font-weight: 900;
+        font-size: x-large;
+        text-shadow: 0px 0px 5px lightgray;
+
+        transition: transform 0.3s, font-weight 0.3s, text-shadow 0.3s;          
+      }
   
+      .unselectedComment {
+        transform: scale(1);
+        font-weight: 400;
+        font-size: x-large;
+        text-shadow: 0px 0px 0px lightgray;
+        transition: transform 0.3s, font-weight 0.3s, text-shadow 0.3s;
+      }
+
+      .peerComment {
+        grid-area: peerComment;
+
+        display: grid;
+        text-align: center;
+        border-left: 20px solid rgba(79, 38, 131, 0.2);
+        border-bottom: 2px solid lightgray;
+        
+      }
+
+      .taComment {
+        grid-area: taComment;
+        text-align: center;
+        border-left: 20px solid rgba(255, 198, 47, 0.2);
+        // border: 2px dotted red;
+      }
+
+    }
+
+  }
+
+
 }
+  
+
 
 // .barchart {
 //   width: 50%;
