--- a/components/styles/submissionview.module.scss
+++ b/components/styles/submissionview.module.scss
@@ -148,13 +148,10 @@
   margin-top: 1rem;
 
   display: grid;
-  grid-template-columns: 6fr 10fr;
+  grid-template-columns: 3fr 5fr;
   grid-template-rows: auto;
   grid-template-areas: "chartContainer commentsField";
 
-  flex-direction: row;
-  justify-content: space-evenly;
-  align-items: center;
   height: 500px;
 
   border-radius: 0.25rem;
@@ -167,21 +164,29 @@
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
-    margin: 0 1rem 0 0; 
-    height: 100%;
-    padding: 1rem;
-
-    width: 450px;
+    min-width: 100%;
 
     .commentInstructions {
       text-align: center;
-      padding: 0.25rem;
+      font-size: large;
+    }
+
+    .barChart {
+      width: 95%;
+      padding: 1rem;
     }
 
     .scoresField {
+      font-size: large;
+      font-family: monospace;
+
       display: flex;
       flex-direction: column;
       align-items: flex-end;
+
+      & > p > strong {
+        font-size: x-large;
+      }
     }
   }
 
@@ -200,8 +205,7 @@
       color: white;
       background-color: gray;
       max-height: 50px;
-      min-width: 300px;
-      max-width: 1000px;
+      width: 100%;
       margin: auto;
       padding: 0.5rem;
 
