--- a/components/styles/submissionview.module.scss
+++ b/components/styles/submissionview.module.scss
@@ -174,11 +174,11 @@
     .commentInstructions {
       text-align: center;
       font-size: large;
+      font-family: monospace;
     }
 
     .barChart {
       width: 95%;
-      padding: 1rem;
     }
 
     .scoresField {
