--- a/components/styles/submissionview.module.scss
+++ b/components/styles/submissionview.module.scss
@@ -175,6 +175,7 @@
       text-align: center;
       font-size: large;
       font-family: monospace;
+      padding: 0 5rem;
     }
 
     .barChart {
